# AsistenteHogar

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  01_CONTEXTO_Y_ARQUITECTURA_APP.md  AGENTS.md  ARCHITECTURE_MAP.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CLAUDE.md  ConversacionInicial.md  DESIGN.md  DISENO_UI.md  ENDPOINTS.md  ESTADO_ACTUAL.md  LEGALIDAD.md  MEJORAS_PENDIENTES.md  PRODUCCION_CHECKLIST.md  PROMPT_MAESTRO.md  README.md  SECURITY.md
.agents/rules/: DB-Architect.md  Pydantic-Enforcer.md  Tailwind-Stylist.md  projectmaster.md
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.github/workflows/: ci.yml
.husky/: pre-commit
admin-web/: .env  .env.local.example  .gitignore  nixpacks.toml  package-lock.json  package.json
admin-web/src/: App.tsx  middleware.ts
backend/: .env.example  PRODUCCION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  seed_recetario.py  smoke_test_admin.py  smoke_test_ahorro.py  smoke_test_auth.py  smoke_test_chef.py  smoke_test_confianza.py  smoke_test_dashboard.py  smoke_test_legal.py  smoke_test_lista_compra.py  smoke_test_lista_inteligente.py  smoke_test_modules.py  smoke_test_movimientos.py  smoke_test_perfiles.py  smoke_test_premium.py  smoke_test_rechazar_ingrediente.py  smoke_test_validation.py
backend/alembic/: env.py
backend/alembic/versions/: 3e8f2a1b9c7d_add_performance_indexes.py  8a278436b672_add_priority_to_tasks.py  95c749193f65_initial_schema.py  a1c3e5f70b92_add_perfil_hogar.py  a5b3c1d9e7f2_add_perfiles_individuales.py  b2c4d6e8f0a1_add_precio_unitario_fecha_compra_movimientos.py  b7d4e9a2c1f8_add_registros_borrado.py  c2d4f6a80e04_add_recetas_historial.py  c6d8f0a1b2e3_add_lista_compra.py  d3e5f7b91a26_drop_eventos_y_tareas.py  d4f6a8b02c15_add_memoria_gustos_y_valoracion.py  e1f3a5c70d84_add_admin_tables.py  e7a9c1b3d5f0_add_movimientos_despensa.py  f2c91d7a5b40_add_usuarios_table.py  f3b8d2e6a1c9_add_ultima_confirmacion.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  admin.py  admin_auth.py  admin_prompts.py  admin_recetario.py  ahorro.py  auth.py  calendar.py  chef.py  dashboard.py  historial.py  lista_compra.py  onboarding.py  pantry.py  perfiles.py  tasks.py  webhooks.py
backend/app/core/: config.py  logging_config.py  rate_limit.py  redis_client.py  security.py  token_blocklist.py  utils.py
backend/app/jobs/: purge.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: __init__.py  admin_user.py  calendar.py  dashboard.py  exceptions.py  historial.py  lista_compra.py  memoria.py  movimientos.py  pantry.py  perfil.py  perfiles_individual.py  prompt_template.py  receta_maestra.py  task.py  user.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  admin_auth.py  ahorro.py  auth.py  calendar.py  dashboard.py  historial.py  lista_compra.py  llm.py  memoria.py  onboarding.py  pantry.py  premium.py  privacy.py  prompt_config.py
design-system/: DESIGN_GUIDE.html  index.html
design-system/components/: badge-chip.html  button.html  card.html  chat-screen.html  dashboard-screen.html  despensa-screen.html  input.html  (+8 more)
docs/: ESTRATEGIA_COMERCIAL.md  PLAN_PIVOTEO.md
frontend/: .env.development  .env.example  .env.production  .gitignore  .prettierignore  App.tsx  app.json  babel.config.js  eas.json  eslint.config.js  lint-staged.config.js  package-lock.json  package.json  tailwind.config.js
(+96 files in other folders)
